add dist out file support.
svn-id@22 gmail.com

--- a/nfast/Makefile
+++ b/nfast/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -g
-SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc 
+SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc
 OBJS = ${SRCS:.cc=.o}
 
 bmain: $(OBJS)
