svn-id@40 gmail.com

--- a/nfast/Makefile
+++ b/nfast/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -g
+CXXFLAGS = -O2
 SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc bdhtnet.cc btcodec.cc sha1.cc
 OBJS = ${SRCS:.cc=.o}
 
