--- a/nfast/Makefile
+++ b/nfast/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -O2
-SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc bdhtnet.cc btcodec.cc sha1.cc bpeermgr.cc btracker.cc bqueue.cc bpeer.cc bclock.cc
+SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc bdhtnet.cc btcodec.cc sha1.cc bpeermgr.cc btracker.cc bqueue.cc bpeer.cc bclock.cc butils.cc
 OBJS = ${SRCS:.cc=.o}
 
 bmain: $(OBJS)
