--- a/nfast/Makefile
+++ b/nfast/Makefile
@@ -1,7 +1,10 @@
 CXX = g++
 CXXFLAGS = -O2
-SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc bdhtnet.cc btcodec.cc sha1.cc bpeermgr.cc btracker.cc bqueue.cc bpeer.cc bclock.cc butils.cc boffer.cc bupdown.cc
+SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc bdhtnet.cc btcodec.cc sha1.cc bpeermgr.cc btracker.cc bqueue.cc bpeer.cc bclock.cc butils.cc boffer.cc bupdown.cc bchunk.cc
 OBJS = ${SRCS:.cc=.o}
+
+all:
+	sh build.sh bmain
 
 bmain: $(OBJS)
 	$(CXX) $(LDFLAGS) -o bmain $(OBJS) $(LDLIBS)
@@ -9,5 +12,8 @@ bmain: $(OBJS)
 .cc.o:
 	$(CXX) -c $< -o $@
 
-clean:
+bclean:
 	rm -f $(OBJS)
+
+clean:
+	sh build.sh bclean
