--- a/nfast/Makefile
+++ b/nfast/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -O2
+CXXFLAGS = -g
 SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc bdhtnet.cc btcodec.cc sha1.cc bpeermgr.cc btracker.cc bqueue.cc bpeer.cc bclock.cc butils.cc boffer.cc bupdown.cc bchunk.cc
 OBJS = ${SRCS:.cc=.o}
 
@@ -10,7 +10,7 @@ bmain: $(OBJS)
 	$(CXX) $(LDFLAGS) -o bmain $(OBJS) $(LDLIBS)
 
 .cc.o:
-	$(CXX) -c $< -o $@
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 bclean:
 	rm -f $(OBJS)
