--- a/nfast/Makefile
+++ b/nfast/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -g
+CXXFLAGS += -g
 SRCS = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc bdhtnet.cc btcodec.cc sha1.cc bpeermgr.cc btracker.cc bqueue.cc bpeer.cc bclock.cc butils.cc boffer.cc bupdown.cc bchunk.cc bitfield.cc
 OBJS = ${SRCS:.cc=.o}
 
