--- a/nfast/configure.ac
+++ b/nfast/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.62)
-AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
+AC_INIT(btload, 0.4.1)
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/bchunk.cc])
 AC_CONFIG_HEADERS([config.h])
