--- a/nfast/src/btdht/Makefile.am
+++ b/nfast/src/btdht/Makefile.am
@@ -2,7 +2,7 @@ noinst_LIBRARIES = libsub_btdht.a
 
 libsub_btdht_a_SOURCES = \
 	bdhtpacket.cc  \
-	bdhtpacket.h
+	bdhtnet.h
 	
 
 INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
