portable for windows
svn-id@124 gmail.com

--- a/nfast/Makefile.am
+++ b/nfast/Makefile.am
@@ -1,3 +1,7 @@
 SUBDIRS = src
 
-EXTRA_DIST = autogen.sh
+EXTRA_DIST = autogen.sh \
+	include/sys/socket.h \
+	include/netdb.h \
+	include/arpa/inet.h \
+	include/netinet/in.h
