--- a/nfast/configure.ac
+++ b/nfast/configure.ac
@@ -15,7 +15,12 @@ AC_PROG_CC
 # Checks for libraries.
 
 # Checks for header files.
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h machine/endian.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h])
+AC_CHECK_HEADERS([stdlib.h string.h sys/socket.h])
+AC_CHECK_HEADERS([endian.h machine/endian.h])
+AC_CHECK_HEADERS([windows.h])
+AC_CHECK_HEADERS([winsock.h], WS2_LDADD="-lws2_32")
+AC_SUBST(WS2_LDADD)
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
