ktable start rebuild work
git-svn-id: http://btload.googlecode.com/svn/branches/kadmin@212 gmail.com

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,4 +4,5 @@ EXTRA_DIST = autogen.sh \
 	include/win32/sys/socket.h \
 	include/win32/netdb.h \
 	include/win32/arpa/inet.h \
-	include/win32/netinet/in.h
+	include/win32/netinet/in.h \
+	dhtboot.txt
