ktable fix for split bucket
git-svn-id: http://btload.googlecode.com/svn/branches/kadmin@231 gmail.com

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,9 +1,11 @@
-all: pingdht finddht
+all: pingdht finddht getpeersdht
 
 pingdht: pingdht.o btcodec.o
 	$(CXX) $(LDFLAGS) -o pingdht pingdht.o btcodec.o
 finddht: finddht.o btcodec.o
 	$(CXX) $(LDFLAGS) -o finddht finddht.o btcodec.o
+getpeersdht: getpeersdht.o btcodec.o
+	$(CXX) $(LDFLAGS) -o getpeersdht getpeersdht.o btcodec.o
 
 clean:
 	rm -f *.o
