DHT refresh stable now
git-svn-id: http://btload.googlecode.com/svn/branches/kadmin@232 gmail.com

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,4 +5,6 @@ EXTRA_DIST = autogen.sh \
 	include/win32/netdb.h \
 	include/win32/arpa/inet.h \
 	include/win32/netinet/in.h \
+	dhtconvert.sh \
+	dhtboot.dat  \
 	dhtboot.txt
