add dht tracker
git-svn-id: http://btload.googlecode.com/svn/branches/kadmin@237 gmail.com

--- a/src/btdht/Makefile.am
+++ b/src/btdht/Makefile.am
@@ -11,6 +11,8 @@ libsub_btdht_a_SOURCES = \
 	kfind.cc    \
 	kgetpeers.cc \
 	kgetpeers.h  \
+	dhtracker.h  \
+	dhtracker.cc \
 	kfind.h     \
 	kutils.cc   \
 	kutils.h    \
