add DHT request services
git-svn-id: http://btload.googlecode.com/svn/branches/kadmin@272 gmail.com

--- a/src/btdht/Makefile.am
+++ b/src/btdht/Makefile.am
@@ -19,6 +19,8 @@ libsub_btdht_a_SOURCES = \
         bootupd.cc   \
 	checkerd.h  \
 	checkerd.cc \
+	services.cc \
+	services.h  \
 	kfind.h     \
 	kutils.cc   \
 	kutils.h    \
