--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
 CXXFLAGS = -g
-all: pingdht finddht getpeersdht getpeersdht_r finddht_r
+all: pingdht finddht getpeersdht getpeersdht_r finddht_r get_peers
 
 pingdht: pingdht.o btcodec.o
 	$(CXX) $(LDFLAGS) -o pingdht pingdht.o btcodec.o
@@ -11,6 +11,8 @@ getpeersdht: getpeersdht.o btcodec.o
 	$(CXX) $(LDFLAGS) -o getpeersdht getpeersdht.o btcodec.o
 getpeersdht_r: getpeersdht_r.o btcodec.o
 	$(CXX) $(LDFLAGS) -o getpeersdht_r getpeersdht_r.o btcodec.o
+get_peers: get_peers.o
+	$(CXX) $(LDFLAGS) -o get_peers get_peers.o
 
 clean:
 	rm -f *.o
