remote test file
git-svn-id: http://btload.googlecode.com/svn/branches/kadmin@284 gmail.com

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = pingdht finddht getpeersdht getpeersdht_r finddht_r get_peers btcodec_bench
+bin_PROGRAMS = pingdht finddht getpeersdht getpeersdht_r finddht_r get_peers
 
 pingdht_SOURCES = pingdht.cc btcodec.cc btcodec.h
 finddht_SOURCES = finddht.cc btcodec.cc btcodec.h
@@ -6,4 +6,3 @@ finddht_r_SOURCES = finddht_r.cc btcodec.cc btcodec.h
 getpeersdht_SOURCES = getpeersdht.cc btcodec.cc btcodec.h
 getpeersdht_r_SOURCES = getpeersdht_r.cc btcodec.cc btcodec.h
 get_peers_SOURCES = get_peers.cc
-btcodec_bench_SOURCES = btcodec_bench.cc btcodecx.cc
